3rd/practice/practice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: practice-app
  template:
    metadata:
      labels:
        app: practice-app
    spec:
      containers:
      - name: practice-app
        image: asia-northeast3-docker.pkg.dev/ornate-axiom-452414-s4/kube-study-registry/third-week-exercise:1.0.0
        ports:
          - containerPort: 3000
