3rd/practice/practice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: practice-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: practice-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
